--- a/app/src/main/res/layout/activity_trabajador_ticket_detail.xml
+++ b/app/src/main/res/layout/activity_trabajador_ticket_detail.xml
@@ -57,14 +57,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp" />
-
                 <ImageView
                     android:id="@+id/ivTicketImage"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:layout_marginBottom="8dp"
-                    android:scaleType="centerCrop" />
-
+                    android:scaleType="centerInside"
+                    android:adjustViewBounds="true"
+                    android:background="@color/light_gray"
+                    android:layout_margin="8dp"/>
                 <TextView
                     android:id="@+id/tvCreationDate"
                     android:layout_width="match_parent"
