--- a/app/src/main/res/layout/activity_gestion_solicitudes.xml
+++ b/app/src/main/res/layout/activity_gestion_solicitudes.xml
@@ -42,18 +42,25 @@
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="135dp" />
 
         <TextView
             android:id="@+id/tvNoSolicitudes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="116dp"
             android:drawablePadding="8dp"
             android:text="No hay solicitudes pendientes"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:visibility="gone"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="80dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
