--- a/app/src/main/res/drawable/abordersolicitudes.xml
+++ b/app/src/main/res/drawable/abordersolicitudes.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#cfd8dc" /> <!-- Color de fondo (opcional) -->
+    <solid android:color="#e7fbf6" /> <!-- Color de fondo (opcional) -->
     <stroke
-        android:color="#cfd8dc"
+        android:color="#e7fbf6"
         android:width="10dp" />     <!-- Ancho del borde -->
     <corners android:radius="8dp" />  <!-- Radio de las esquinas (opcional) -->
 </shape>
