--- a/app/src/main/res/layout/item_solicitud.xml
+++ b/app/src/main/res/layout/item_solicitud.xml
@@ -49,17 +49,19 @@
                 android:id="@+id/btnAprobar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
-                android:text="Aprobar"
-                android:layout_marginEnd="8dp"/>
+                android:background="@drawable/abordersolicitudes"
+                android:text="Aprobar" />
 
             <Button
                 android:id="@+id/btnRechazar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:text="Rechazar"
-                android:layout_marginStart="8dp"/>
+                android:background="@drawable/abordersolicitudes"
+                android:text="Rechazar" />
 
         </LinearLayout>
 
