--- a/app/src/main/res/layout/activity_crear_nuevo_ti.xml
+++ b/app/src/main/res/layout/activity_crear_nuevo_ti.xml
@@ -60,7 +60,7 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="31dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Seleccione el Problema"
                 android:textSize="14sp" />
@@ -74,8 +74,8 @@
                 android:padding="6dp" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="34dp"
+                android:layout_width="135dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
                 android:text="Detalle el Problema"
                 android:textSize="14sp" />
@@ -86,6 +86,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Detalle brevemente el problema."
                 android:inputType="textMultiLine"
+                android:padding="2dp"
                 android:minLines="5"
                 android:background="@drawable/bordes"
                 android:layout_marginBottom="20dp"/>
@@ -118,8 +119,9 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="33dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:layout_marginTop="20dp"
                 android:text="Adjunte una fotografía de la falla"
                 android:textSize="14sp" />
             <RelativeLayout
