--- a/app/src/main/res/layout/activity_trabajador_menu.xml
+++ b/app/src/main/res/layout/activity_trabajador_menu.xml
@@ -23,14 +23,18 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/btnCerrarSesion"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
-        app:layout_constraintBottom_toTopOf="@id/btnCerrarSesion"/>
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
         android:id="@+id/btnCerrarSesion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/admincerrar"
         android:text="Cerrar Sesión"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
