--- a/app/src/main/res/layout/activity_inicio_user.xml
+++ b/app/src/main/res/layout/activity_inicio_user.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:background="@android:drawable/editbox_background"
-        android:hint="Buscar tickets..."
+        android:hint="Buscar por número de ticket..."
         android:padding="12dp"
         android:importantForAutofill="no"
         android:inputType="text"
