--- a/app/src/main/res/layout/activity_trabajador_ticket_detail.xml
+++ b/app/src/main/res/layout/activity_trabajador_ticket_detail.xml
@@ -103,7 +103,7 @@
                     android:padding="16dp">
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="100dp"
+                        android:layout_width="80dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="8dp"
                         app:cardCornerRadius="4dp">
@@ -112,14 +112,15 @@
                             android:id="@+id/tvStatus"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingStart="16dp"
+                            android:paddingStart="6dp"
                             android:paddingTop="2dp"
+                            android:text="Terminado"
                             android:textStyle="bold"
                             android:layout_marginBottom="8dp" />
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="70dp"
+                        android:layout_width="50dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="8dp"
                         app:cardCornerRadius="4dp">
@@ -128,14 +129,20 @@
                             android:id="@+id/tvPriority"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-
+                            android:text="Media"
                             android:paddingTop="2dp"
-                            android:paddingStart="16dp"
+                            android:paddingStart="6dp"
                             android:textStyle="bold"
                             android:layout_marginBottom="8dp" />
                     </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:text="Editar Estado" />
 
                 <Spinner
                     android:id="@+id/spinnerStatus"
