--- a/app/src/main/res/layout/activity_perfil_user.xml
+++ b/app/src/main/res/layout/activity_perfil_user.xml
@@ -5,10 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="#FFFFFF"
     tools:context=".Perfil.Perfil_user">
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,6 +18,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
+            <!-- Imagen de perfil -->
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="168dp"
@@ -32,6 +31,7 @@
                 android:layout_marginEnd="122dp"
                 app:srcCompat="@drawable/gata2" />
 
+            <!-- Username -->
             <TextView
                 android:id="@+id/usernameValue"
                 android:layout_width="wrap_content"
@@ -45,10 +45,10 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="79dp"
                 android:gravity="center"
-
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
+            <!-- Email -->
             <TextView
                 android:id="@+id/emailValue"
                 android:layout_width="wrap_content"
@@ -61,9 +61,9 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="110dp"
                 android:gravity="center"
-
                 android:textSize="15sp" />
 
+            <!-- Notificaciones card -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -100,11 +100,50 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-
                 </RelativeLayout>
-
             </LinearLayout>
 
+            <!-- Cambiar Contraseña card -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/ausercard"
+                android:orientation="vertical"
+                android:padding="15dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/changePasswordButton"
+                        android:layout_width="186dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginStart="80dp"
+                        android:layout_marginTop="1dp"
+                        android:layout_marginEnd="75dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/admincerrar"
+                        android:backgroundTint="#068f41"
+                        android:radius="6dp"
+                        android:text="Cambiar Contraseña"
+                        android:textSize="17sp"
+                        android:tint="#068f41"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.497"
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                </RelativeLayout>
+            </LinearLayout>
+
+            <!-- Cerrar Sesión card -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -141,147 +180,9 @@
                         app:layout_constraintHorizontal_bias="0.497"
                         app:layout_constraintStart_toStartOf="parent" />
 
-
                 </RelativeLayout>
-
             </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
-
-    <!--
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="168dp"
-        android:layout_height="129dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="121dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginEnd="122dp"
-        app:srcCompat="@drawable/gata2" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="247dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="82dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="81dp"
-        android:elevation="12dp"
-        android:fontFamily="serif"
-        android:gravity="center"
-        android:text="HOLA USUARIO"
-        android:textColor="#13814b"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="181dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="168dp"
-        android:gravity="center"
-        android:text="Bienvenido de Nuevo: "
-        android:textSize="17sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/usernameValue"
-        android:layout_width="87dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="79dp"
-        android:gravity="center"
-        android:text="Bienvenido de Nuevo: "
-        android:textSize="17sp"
-        android:textStyle="bold" />
-
-
-    <TextView
-        android:id="@+id/emailValue"
-        android:layout_width="203dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="109dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="99dp"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="61dp"
-        android:layout_height="61dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="47dp"
-        android:layout_marginEnd="38dp"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/campanaxd" />
-
-    <Switch
-        android:id="@+id/notificationSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_below="@+id/emailValue"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="42dp"
-        android:text="Recibir Notificaciones"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="183dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
-        android:background="@drawable/adminborder">
-
-
-        <Button
-            android:id="@+id/logoutButton"
-            android:layout_width="182dp"
-            android:layout_height="53dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="92dp"
-            android:layout_weight="1"
-            android:background="@drawable/admincerrar"
-            android:backgroundTint="#068f41"
-            android:radius="6dp"
-            android:text="Cerrar Sesión"
-            android:textSize="17sp"
-            android:tint="#068f41"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
--->
-
-
-
 </RelativeLayout>
