--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -300,29 +300,63 @@
                         app:layout_constraintVertical_bias="0.808" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btnCerrarSesion"
-            android:layout_width="175dp"
-            android:layout_height="47dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_weight="1"
-            android:background="@drawable/admincerrar"
-            android:backgroundTint="#068f41"
-            android:radius="6dp"
-            android:text="Cerrar Sesión"
-            android:textSize="14sp"
-            android:tint="#068f41"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <LinearLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="413dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-            app:layout_constraintVertical_bias="0.369" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginEnd="8dp"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imagePassword"
+                        android:layout_width="46dp"
+                        android:layout_height="53dp"
+                        app:srcCompat="@drawable/aadmin" />
+
+                    <Button
+                        android:id="@+id/btnChangePassword"
+                        android:layout_width="107dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/admincerrar"
+                        android:text="Cambiar Contraseña"
+                        android:textSize="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/btnCerrarSesion"
+                android:layout_width="175dp"
+                android:layout_height="47dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_weight="1"
+                android:background="@drawable/admincerrar"
+                android:backgroundTint="#068f41"
+                android:radius="6dp"
+                android:text="Cerrar Sesión"
+                android:textSize="14sp"
+                android:tint="#068f41" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
