--- a/app/src/main/res/layout/activity_trabajador_menu.xml
+++ b/app/src/main/res/layout/activity_trabajador_menu.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context=".Trabajador.TrabajadorMenu">
+
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
@@ -23,18 +24,32 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@id/btnCerrarSesion"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
-    <Button
-        android:id="@+id/btnCerrarSesion"
+    <LinearLayout
+        android:id="@+id/buttonsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/admincerrar"
-        android:text="Cerrar Sesión"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/btnChangePassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/admincerrar"
+            android:text="Cambiar Contraseña" />
+
+        <Button
+            android:id="@+id/btnCerrarSesion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/admincerrar"
+            android:text="Cerrar Sesión" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
