--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -301,6 +301,8 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
+
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="413dp"
@@ -311,6 +313,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+            <androidx.cardview.widget.CardView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginEnd="8dp"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageReport"
+                        android:layout_width="46dp"
+                        android:layout_height="53dp"
+                        app:srcCompat="@drawable/aadmin" />
+
+                    <Button
+                        android:id="@+id/btnReportes"
+                        android:layout_width="107dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/admincerrar"
+                        android:text="Reportes"
+                        android:textSize="12dp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="120dp"
@@ -341,12 +370,13 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <Button
                 android:id="@+id/btnCerrarSesion"
                 android:layout_width="175dp"
-                android:layout_height="47dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_weight="1"
@@ -356,6 +386,7 @@
                 android:text="Cerrar Sesión"
                 android:textSize="14sp"
                 android:tint="#068f41" />
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
