--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@drawable/ausercard">
+    android:background="@drawable/editarcontrasena">
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        app:srcCompat="@drawable/candados2" />
 
     <EditText
         android:id="@+id/currentPasswordEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/rounded_edittext_password_background"
         android:hint="Contraseña actual"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textColorHint="#FFFFFF"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/admincerrar"/>
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/newPasswordEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/rounded_edittext_password_background"
         android:hint="Nueva contraseña"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textColorHint="#FFFFFF"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/admincerrar"/>
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/confirmPasswordEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_margin="12dp"
+        android:background="@drawable/rounded_edittext_password_background"
         android:hint="Confirmar nueva contraseña"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textColorHint="#FFFFFF"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/admincerrar"/>
+        android:textSize="16sp" />
 
 </LinearLayout>
