Nuevos Diseños 19Novv

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:background="@drawable/rounded_edittext_background"
-        android:hint="Usuario"
+        android:hint="Correo Electrónico"
         android:inputType="text"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,6 +119,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#068f41"
         android:text="Iniciar Sesión"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -130,6 +131,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:backgroundTint="#032100"
+        android:textColor="@color/white"
         android:text="SOLICITAR MI REGISTRO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
