--- a/app/src/main/res/layout/activity_inicio_user.xml
+++ b/app/src/main/res/layout/activity_inicio_user.xml
@@ -12,6 +12,7 @@
         android:id="@+id/topBar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="10dp"
         android:background="#068f41"
         android:elevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,10 +62,11 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextText2"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@id/crear"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/editTextText2">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -84,7 +86,7 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:padding="8dp"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
         </FrameLayout>
 
@@ -95,11 +97,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginBottom="30dp"
         android:background="@android:color/holo_purple"
         android:text="Crear Ticket"
+        android:textSize="16dp"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/swipeRefreshLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
