--- a/app/src/main/res/layout/activity_nuevo_registro.xml
+++ b/app/src/main/res/layout/activity_nuevo_registro.xml
@@ -28,6 +28,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
+                    android:layout_marginTop="24dp"
                     android:background="#068f41"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -95,6 +96,7 @@
                     android:text="Llene los datos y en un plazo no mayor a 48 horas nos comunicaremos con usted"
                     android:textAlignment="center"
                     android:textSize="16sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +105,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/abordersolicitudes"
                     android:orientation="vertical"
                     android:layout_marginTop="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
