--- a/app/src/main/res/layout/activity_trabajador_management.xml
+++ b/app/src/main/res/layout/activity_trabajador_management.xml
@@ -7,12 +7,44 @@
     android:padding="16dp"
     tools:context=".Trabajador.TrabajadorManagement">
 
+    <LinearLayout
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:background="@drawable/botoneditarp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/regreso" />
+
+            <Button
+                android:id="@+id/btnTrabajo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:padding="0dp"
+                android:text="Regresar"
+                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gestión de Trabajadores"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:layout_marginTop="12dp"
         android:layout_gravity="center"
         android:layout_marginBottom="16dp"/>
 
