--- a/app/src/main/res/layout/activity_trabajador_ticket_detail.xml
+++ b/app/src/main/res/layout/activity_trabajador_ticket_detail.xml
@@ -21,10 +21,43 @@
             android:textStyle="bold" />
 
         <com.google.android.material.card.MaterialCardView
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:background="@drawable/botoneditarp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/regreso" />
+
+                <Button
+                    android:id="@+id/btnregDetaill"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:padding="0dp"
+                    android:text="Regresar"
+                    android:textColor="@color/black"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
+            android:layout_marginTop="15dp"
             app:cardElevation="4dp">
 
             <LinearLayout
@@ -114,7 +147,7 @@
                             android:layout_height="wrap_content"
                             android:paddingStart="6dp"
                             android:paddingTop="2dp"
-                            android:text="Terminado"
+                            android:text="En Proceso"
                             android:textStyle="bold"
                             android:layout_marginBottom="8dp" />
                     </androidx.cardview.widget.CardView>
@@ -129,7 +162,7 @@
                             android:id="@+id/tvPriority"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Media"
+                            android:text="Alta"
                             android:paddingTop="2dp"
                             android:paddingStart="6dp"
                             android:textStyle="bold"
