--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,5 +31,12 @@
     <color name="priority_high">#FF5252</color>
     <color name="priority_normal">#757575</color>
     <color name="priority_low">#9E9E9E</color>
+    <!-- Prioridades IA -->
+    <color name="ai_success">#4CAF50</color>
+    <color name="ai_warning">#FFC107</color>
+    <color name="ai_error">#F44336</color>
+    <color name="ai_neutral">#9E9E9E</color>
+    <color name="success_green">#4CAF50</color>
+    <color name="error_red">#F44336</color>
 
 </resources>
